--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
   </head>
 
   <body>
-    <svg height="200" width="200">
+    <svg height="400" width="400">
       <circle
-        r="95"
-        cx="100"
-        cy="100"
+        r="190"
+        cx="200"
+        cy="200"
         fill="transparent"
         stroke="blue"
-        stroke-width="5"
-        stroke-dasharray="590"
-        stroke-dashoffset="10"
+        stroke-width="15"
+        transform="rotate(-90 200 200)"
       />
     </svg>
 
