--- a/index.html
+++ b/index.html
@@ -4,24 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Timer</title>
+
+    <link rel="stylesheet" href="styles.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
   </head>
 
   <body>
-    <svg height="400" width="400">
-      <circle
-        r="190"
-        cx="200"
-        cy="200"
-        fill="transparent"
-        stroke="blue"
-        stroke-width="15"
-        transform="rotate(-90 200 200)"
-      />
-    </svg>
+    <div class="timer">
+      <div class="controls">
+        <input id="duration" value="30" />
 
-    <input id="duration" value="30" />
-    <button id="start">Start</button>
-    <button id="pause">Pause</button>
+        <div>
+          <button id="start"><i class="fas fa-play"></i></button>
+          <button id="pause"><i class="fas fa-pause"></i></button>
+        </div>
+      </div>
+
+      <svg class="dial">
+        <circle
+          r="190"
+          cx="200"
+          cy="200"
+          fill="transparent"
+          stroke="#ff4b5c"
+          stroke-width="15"
+          transform="rotate(-90 200 200)"
+        />
+      </svg>
+    </div>
 
     <script src="timer.js"></script>
     <script src="index.js"></script>
